2008-11-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #5714: Pagecount not correct in indexed_search

2008-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9771: htmlArea RTE spellchecker not working in TYPO3 4.3-dev

2008-11-11  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #5826: Wrong disposal of language object in front-end
	* Added feature #9667: Use t3lib_div::trimExplode() in t3lib_div::intExplode() (thanks to Niels Pardon)

2008-11-11  Michael Stucki  <michael@typo3.org>

	* Fixed bug #5611: Frontend preview and simulate time is buggy

2008-11-08  Michael Stucki  <michael@typo3.org>

	* Follow-up to bug #8399: Table index was too long after changing the field size

2008-11-06  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9625: Fixed regular expression
	* Cleanup: Set SVN properties and tags

2008-11-06  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #9615: Move frontend editing to a system extension.

2008-11-04  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #9681: the Wrap for forgotMessage in the subpart ###TEMPLATE_FORGOT### does not work (credits Steffen Kamper)

2008-11-04  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #9734: User selector in Web>Access doesn't work (thanks to Andreas Kundoch)
	* Fixed bug #9717: t3lib_parsehtml_proc removes valid attributes of SPAN tags

2008-11-04  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9599: felogin - Enable Caching "USER" instead of "USER_INT" (thanks to Dmitry Dulepov & Steffen Kamper)
	* Added feature #9661: Extend condition operators for globalVar (thanks to Steffen Kamper)
	* Cleanup: Specified deprecated statements
	* Follow-up to feature #9661: Re-enable matching empty globalVars

2008-11-03  Oliver Hader  <oliver@typo3.org>

	* Added feature #9654: Enable includeLibs also for USER and COA objects
	* Fixed bug #9724: Editing shortcuts does not work anymore