@@ -5,6 +5,7 @@
 2008-11-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #9771: htmlArea RTE spellchecker not working in TYPO3 4.3-dev
+	* Fixed bug #9755: Incorrect initialization sequence in class browse_links
 
 2008-11-11  Oliver Hader  <oliver@typo3.org>
 
